--- a/bare/jenkins-deployment.yaml
+++ b/bare/jenkins-deployment.yaml
@@ -111,7 +111,7 @@ metadata:
 spec:
   selector:
     app: jenkins
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: ui
       port: 8080
