--- a/bare/jenkins-deployment.yaml
+++ b/bare/jenkins-deployment.yaml
@@ -117,7 +117,7 @@ spec:
       port: 8080
       targetPort: 8080      
       protocol: TCP
-      nodePort: 32001
+      # nodePort: 32001
     - name: slave
       port: 50000
       targetPort: 50000
