--- a/bare/jenkins-deployment.yaml
+++ b/bare/jenkins-deployment.yaml
@@ -111,13 +111,13 @@ metadata:
 spec:
   selector:
     app: jenkins
-  type: LoadBalancer
+  type: NodePort
   ports:
     - name: ui
       port: 8080
       targetPort: 8080      
       protocol: TCP
-      # nodePort: 32001
+      nodePort: 32001
     - name: slave
       port: 50000
       targetPort: 50000
