--- a/jenkins.env.example
+++ b/jenkins.env.example
@@ -3,8 +3,10 @@
 __NFS_VOLUME__=${__JENKINS_NFS_DATA__}
 __NFS_REMOTE_HOST__=${__NFS_REMOTE_HOST_URL__}
 __LOCAL_DIRECTORY__=${__LOCAL_NFS_NT_DIRECTORY__}
+__JENKINS_DATA_DIR__=${__JENKINS_DATA_DIR__}
 
 # Git configuration
+GIT_REPOSITORY=${__GIT_REPOSITORY__}
 GIT_AUTHOR_EMAIL=${__GIT_AUTHOR_EMAIL__}
 GIT_AUTHOR_NAME=${__GIT_AUTHOR_NAME__}
 GIT_BRANCH=${__GIT_BRANCH__}
