--- a/bare/jenkins-loadbalancer.yaml
+++ b/bare/jenkins-loadbalancer.yaml
@@ -1,4 +1,3 @@
----
 
 ##########################################################################
 # Hostname wildcards 
@@ -17,12 +16,12 @@ spec:
     http:
       paths:
       - pathType: ImplementationSpecific
-        path: 10.0.0.129
+        path: 10.0.0.40
         backend:
           service:
-            name: jenkins
+            name: jenkins-svc
             port:
-              number: 32307
+              number: 8080
 
 
 ---
@@ -157,7 +156,7 @@ spec:
               number: 8080
 
 
-# ---
+---
 
 
 apiVersion: networking.k8s.io/v1
