--- a/bare/jenkins-deployment.yaml
+++ b/bare/jenkins-deployment.yaml
@@ -134,6 +134,7 @@ spec:
     - name: https
       port: 443
       targetPort: 443
+      protocol: TCP
     - name: slave
       port: 50000
       targetPort: 50000
